// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <Portal
    containerInfo={<div />}
  >
    <MetaData
      updateCenterKey="java"
    />
  </Portal>
  <Portal
    containerInfo={<div />}
  >
    <MetaData
      updateCenterKey="python"
    />
  </Portal>
  <Portal
    containerInfo={<div />}
  >
    <MetaData
      updateCenterKey="abap"
    />
  </Portal>
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <Portal
    containerInfo={<div />}
  >
    <MetaData
      updateCenterKey="csharp"
    />
  </Portal>
</div>
`;
